重构NekoQuery